--- a/LoginPage/Login.html
+++ b/LoginPage/Login.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 
-<html lang="en" data-bo-theme="light">
+<html lang="en">
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -22,6 +22,9 @@
                 <label for="txtPassword">Password</label>
             </div>
             <input type="submit" value="Login" class="bo-mx-auto" />
+            <p style="width: 75%;">
+                Don't have an account? <a href="#">Register here</a>
+            </p>
         </form>
     </div>
 </body>
