--- a/LayoutTest/flex.html
+++ b/LayoutTest/flex.html
@@ -27,9 +27,27 @@
                 </ul>
             </div>
         </nav>
+
         <div class="bo-flex-container">
-            bo-flex-container
+            <h1>bo-flex-container</h1>
+            <div style="display: flex; flex-wrap: wrap;">
+                <div style="padding: 1rem; flex: 1 0 20%; background-color: #1E1E2A;">Background (black-russian)</div>
+                <div style="padding: 1rem; flex: 1 0 20%; background-color: #44404D;">Grape</div>
+                <div style="padding: 1rem; flex: 1 0 20%; background-color: #7B7794;">Topaz</div>
+                <div style="padding: 1rem; flex: 1 0 20%; background-color: #7D444F;">Solid Pink</div>
+                <div style="padding: 1rem; flex: 1 0 20%; background-color: #EB9653;">Highlight (sea-buckthorn)</div>
+            </div>
+
+            <div>
+                <h1>Heading 1</h1>
+                <h2>Heading 2</h2>
+                <h3>Heading 3</h3>
+                <h4>Heading 4</h4>
+                <h5>Heading 5</h5>
+                <h6>Heading 6</h6>
+            </div>
         </div>
+
         <script src="Script.js" type="text/javascript"></script>
     </body>
 </html>
