--- a/LayoutTest/flex.html
+++ b/LayoutTest/flex.html
@@ -10,43 +10,47 @@
         <title>LayoutTest - flex</title>
     </head>
     <body>
-        <nav class="bo-navbar">
-            <a href="#" class="bo-nav-logo">LOGO</a>
-            <button type="button" class="bo-navbar-btn">Menu</button>
-            <div class="bo-navbar-collapse">
-                <ul class="bo-nav">
-                    <li class="bo-nav-item">
-                        <a href="#" class="bo-nav-link">bo-nav-link</a>
-                    </li>
-                    <li class="bo-nav-item">
-                        <a href="#" class="bo-nav-link">bo-nav-link</a>
-                    </li>
-                    <li class="bo-nav-item">
-                        <a href="#" class="bo-nav-link">bo-nav-link</a>
-                    </li>
-                </ul>
-            </div>
-        </nav>
+        <header>
+            <nav class="bo-navbar">
+                <a href="#" class="bo-nav-logo">LOGO</a>
+                <button type="button" class="bo-navbar-btn">Menu</button>
+                <div class="bo-navbar-collapse">
+                    <ul class="bo-nav">
+                        <li class="bo-nav-item">
+                            <a href="#" class="bo-nav-link">bo-nav-link</a>
+                        </li>
+                        <li class="bo-nav-item">
+                            <a href="#" class="bo-nav-link">bo-nav-link</a>
+                        </li>
+                        <li class="bo-nav-item">
+                            <a href="#" class="bo-nav-link">bo-nav-link</a>
+                        </li>
+                    </ul>
+                </div>
+            </nav>
+        </header>
 
-        <div class="bo-flex-container">
-            <h1>bo-flex-container</h1>
-            <div style="display: flex; flex-wrap: wrap;">
-                <div style="padding: 1rem; flex: 1 0 20%; background-color: #1E1E2A;">Background (black-russian)</div>
-                <div style="padding: 1rem; flex: 1 0 20%; background-color: #44404D;">Grape</div>
-                <div style="padding: 1rem; flex: 1 0 20%; background-color: #7B7794;">Topaz</div>
-                <div style="padding: 1rem; flex: 1 0 20%; background-color: #7D444F;">Solid Pink</div>
-                <div style="padding: 1rem; flex: 1 0 20%; background-color: #EB9653;">Highlight (sea-buckthorn)</div>
-            </div>
+        <main>
+            <div class="bo-flex-container">
+                <h1>bo-flex-container</h1>
+                <div style="display: flex; flex-wrap: wrap; margin-bottom: 1rem;">
+                    <div style="padding: 1rem; flex: 1 0 20%; background-color: #1E1E2A;">background (black-russian)</div>
+                    <div style="padding: 1rem; flex: 1 0 20%; background-color: #44404D;">foreground-dark (Grape)</div>
+                    <div style="padding: 1rem; flex: 1 0 20%; background-color: #7B7794;">foreground (Topaz)</div>
+                    <div style="padding: 1rem; flex: 1 0 20%; background-color: #7D444F;">secondary (Solid Pink)</div>
+                    <div style="padding: 1rem; flex: 1 0 20%; background-color: #EB9653;">highlight (sea-buckthorn)</div>
+                </div>
 
-            <div>
-                <h1>Heading 1</h1>
-                <h2>Heading 2</h2>
-                <h3>Heading 3</h3>
-                <h4>Heading 4</h4>
-                <h5>Heading 5</h5>
-                <h6>Heading 6</h6>
+                <div>
+                    <h1>Heading 1</h1>
+                    <h2>Heading 2</h2>
+                    <h3>Heading 3</h3>
+                    <h4>Heading 4</h4>
+                    <h5>Heading 5</h5>
+                    <h6>Heading 6</h6>
+                </div>
             </div>
-        </div>
+        </main>
 
         <script src="Script.js" type="text/javascript"></script>
     </body>
