--- a/LayoutTest/flex.html
+++ b/LayoutTest/flex.html
@@ -31,24 +31,22 @@
         </header>
 
         <main>
-            <div class="bo-flex-container">
-                <h1>bo-flex-container</h1>
-                <div style="display: flex; flex-wrap: wrap; margin-bottom: 1rem;">
-                    <div style="padding: 1rem; flex: 1 0 20%; background-color: #1E1E2A;">background (black-russian)</div>
-                    <div style="padding: 1rem; flex: 1 0 20%; background-color: #44404D;">foreground-dark (Grape)</div>
-                    <div style="padding: 1rem; flex: 1 0 20%; background-color: #7B7794;">foreground (Topaz)</div>
-                    <div style="padding: 1rem; flex: 1 0 20%; background-color: #7D444F;">secondary (Solid Pink)</div>
-                    <div style="padding: 1rem; flex: 1 0 20%; background-color: #EB9653;">highlight (sea-buckthorn)</div>
-                </div>
+            <h1>main</h1>
+                <div class="bo-d-flex bo-flex-row bo-flex-wrap" style="margin-bottom: 1rem;">
+                <div style="padding: 1rem; flex: 1 0 20%; background-color: #1E1E2A;">background (black-russian)</div>
+                <div style="padding: 1rem; flex: 1 0 20%; background-color: #44404D;">foreground-dark (Grape)</div>
+                <div style="padding: 1rem; flex: 1 0 20%; background-color: #7B7794;">foreground (Topaz)</div>
+                <div style="padding: 1rem; flex: 1 0 20%; background-color: #7D444F;">secondary (Solid Pink)</div>
+                <div style="padding: 1rem; flex: 1 0 20%; background-color: #EB9653;">highlight (sea-buckthorn)</div>
+            </div>
 
-                <div>
-                    <h1>Heading 1</h1>
-                    <h2>Heading 2</h2>
-                    <h3>Heading 3</h3>
-                    <h4>Heading 4</h4>
-                    <h5>Heading 5</h5>
-                    <h6>Heading 6</h6>
-                </div>
+            <div class="bo-bg-foreground bo-panel">
+                <h1>Heading 1</h1>
+                <h2>Heading 2</h2>
+                <h3>Heading 3</h3>
+                <h4>Heading 4</h4>
+                <h5>Heading 5</h5>
+                <h6>Heading 6</h6>
             </div>
         </main>
 
