--- a/JavascriptObserverFadeIn/index.html
+++ b/JavascriptObserverFadeIn/index.html
@@ -13,18 +13,18 @@
         <header>_header</header>
         <main>
             <div class="bo-panel-container">
-                <div class="bo-panel">bo-panel</div>
-                <div class="bo-panel">bo-panel</div>
-                <div class="bo-panel">bo-panel</div>
-                <div class="bo-panel">bo-panel</div>
-                <div class="bo-panel">bo-panel</div>
-                <div class="bo-panel">bo-panel</div>
-                <div class="bo-panel">bo-panel</div>
-                <div class="bo-panel">bo-panel</div>
-                <div class="bo-panel">bo-panel</div>
-                <div class="bo-panel">bo-panel</div>
-                <div class="bo-panel">bo-panel</div>
-                <div class="bo-panel">bo-panel</div>
+                <div class="bo-scroll-target">bo-panel</div>
+                <div class="bo-scroll-target">bo-panel</div>
+                <div class="bo-scroll-target">bo-panel</div>
+                <div class="bo-scroll-target">bo-panel</div>
+                <div class="bo-scroll-target">bo-panel</div>
+                <div class="bo-scroll-target">bo-panel</div>
+                <div class="bo-scroll-target">bo-panel</div>
+                <div class="bo-scroll-target">bo-panel</div>
+                <div class="bo-scroll-target">bo-panel</div>
+                <div class="bo-scroll-target bo-scroll-slidein-right">bo-panel</div>
+                <div class="bo-scroll-target">bo-panel</div>
+                <div class="bo-scroll-target bo-scroll-slidein-right">bo-panel</div>
             </div>
         </main>
         <script src="Script.js" type="text/javascript"></script>
