--- a/LayoutTest/flex.html
+++ b/LayoutTest/flex.html
@@ -32,7 +32,7 @@
 
         <main>
             <h1>main</h1>
-                <div class="bo-d-flex bo-flex-row bo-flex-wrap" style="margin-bottom: 1rem;">
+            <div class="bo-d-flex bo-flex-row bo-flex-wrap" style="margin-bottom: 1rem;" style="display: none;">
                 <div style="padding: 1rem; flex: 1 0 20%; background-color: #1E1E2A;">background (black-russian)</div>
                 <div style="padding: 1rem; flex: 1 0 20%; background-color: #44404D;">foreground-dark (Grape)</div>
                 <div style="padding: 1rem; flex: 1 0 20%; background-color: #7B7794;">foreground (Topaz)</div>
@@ -47,6 +47,10 @@
                 <h4>Heading 4</h4>
                 <h5>Heading 5</h5>
                 <h6>Heading 6</h6>
+            </div>
+
+            <div class="size-test">
+                <h1>Heading 1</h1>
             </div>
         </main>
 
