--- a/LayoutTest/grid.html
+++ b/LayoutTest/grid.html
@@ -10,23 +10,30 @@
         <title>LayoutTest - grid</title>
     </head>
     <body>
-        <nav class="bo-navbar">
-            <a href="#" class="bo-nav-logo">LOGO</a>
-            <ul class="bo-nav">
-                <li class="bo-nav-item">
-                    <a href="#" class="bo-nav-link">bo-nav-link</a>
-                </li>
-                <li class="bo-nav-item">
-                    <a href="#" class="bo-nav-link">bo-nav-link</a>
-                </li>
-                <li class="bo-nav-item">
-                    <a href="#" class="bo-nav-link">bo-nav-link</a>
-                </li>
-            </ul>
-        </nav>
-        <div class="bo-grid-container">
-            bo-grid-container
-        </div>
+        <header>
+            <nav class="bo-navbar">
+                <a href="#" class="bo-nav-logo">LOGO</a>
+                <button type="button" class="bo-navbar-btn">Menu</button>
+                <div class="bo-navbar-collapse">
+                    <ul class="bo-nav">
+                        <li class="bo-nav-item">
+                            <a href="#" class="bo-nav-link">bo-nav-link</a>
+                        </li>
+                        <li class="bo-nav-item">
+                            <a href="#" class="bo-nav-link">bo-nav-link</a>
+                        </li>
+                        <li class="bo-nav-item">
+                            <a href="#" class="bo-nav-link">bo-nav-link</a>
+                        </li>
+                    </ul>
+                </div>
+            </nav>
+        </header>
+
+        <main>
+            <div class="bo-grid-container">bo-grid-container</div>
+        </main>
+
         <script src="Script.js" type="text/javascript"></script>
     </body>
 </html>
