--- a/LoginPage/index.html
+++ b/LoginPage/index.html
@@ -4,6 +4,9 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="keywords" content="" />
+    <meta name="description" content="" />
+    <meta name="author" content="" />
     <title>TestWebsite - Login</title>
     <link rel="stylesheet" href="StyleSheet.css" type="text/css" />
 </head
