--- a/Navbar/index.html
+++ b/Navbar/index.html
@@ -3,6 +3,9 @@
     <head>
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <meta name="keywords" content="" />
+        <meta name="description" content="" />
+        <meta name="author" content="" />
         <link rel="stylesheet" href="StyleSheet.css" type="text/css" />
         <title>index</title>
     </head>
@@ -24,12 +27,6 @@
         <h1>Index</h1>
         <p>Paragraph</p>
 
-        <script>
-            const _btnMenu = document.querySelector(".bo-navbar-btn");
-            const _navCollapse = document.querySelector(".bo-navbar-collapse");
-            _btnMenu.addEventListener("click", () => {
-                _navCollapse.classList.toggle("show");
-            });
-        </script>
+        <script src="Script.js" type="text/javascript"></script>
     </body>
 </html>
